--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,12 @@ body {
   line-height: 165%;
 }
 
+.wrapper {
+  max-width: 1600px;
+  margin: 0 auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+}
+
 .learn-more-yellow,
 .learn-more-red {
   color: var(--grey-950);
